Create unit test pipeline step