@@ -5,6 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
+		<!-- TODO: Update spring and other dependencies -->
 		<version>2.4.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
@@ -86,6 +87,17 @@
 					<source>16</source>
 					<target>16</target>
 					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.1</version>
+				<configuration>
+					<includes>
+						<include>**/*Spec</include>
+					</includes>
+					<argLine>--enable-preview</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
